--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,7 +21,9 @@ jobs:
     - name: Install Playwright
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npm run test
+    - run: npm install
+    - run: npm install -D @playwright/test
+    - run: npx playwright test  
     - uses: actions/upload-artifact@v2
       if: always()
       with:
