--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,24 +1,30 @@
 name: Playwright Tests
-
 on:
   push:
-    branches:
-    - master
-
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 jobs:
-  e2e-tests:
-    runs-on: ubuntu-latest # or macos-latest, windows-latest
+  test:
+    timeout-minutes: 60
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+       os: [ubuntu-latest] #windows-latest, macOS-latest]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-         node-version: '14'
-      - uses: microsoft/playwright-github-action@v1
-      - run: npm install
-      - run: npm run test
-      - uses: actions/upload-artifact@v2
-        if: always()
-        with:
-         name: playwright-report
-         path: playwright-report/
-         retention-days: 30
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14.x'
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright
+      run: npx playwright install --with-deps
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
